src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Hierarchy__c</fullName>
        <formula>Parent.Parent.Parent.Parent.Parent.Name&amp;&quot; | &quot;&amp;Parent.Parent.Parent.Parent.Name&amp;&quot; | &quot;&amp;Parent.Parent.Parent.Name&amp;&quot; | &quot;&amp; Parent.Parent.Name&amp;&quot; | &quot;&amp; Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_de_suivi__c</fullName>
        <inlineHelpText>Write here the follow up notes from this campaign</inlineHelpText>
        <label>Notes de suivi</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Région</label>
        <picklist>
            <picklistValues>
                <fullName>Laval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Québec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ottawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toronto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporatif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Province Québec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Province Ontario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_focus__c</fullName>
        <description>Group of services applicable</description>
        <inlineHelpText>Choisir le ou les groupes de servives pour lesquels la campagne est génénrée</inlineHelpText>
        <label>Service focus</label>
        <picklist>
            <picklistValues>
                <fullName>O&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mec.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elect.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mat.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N\A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>lien_groupe_chatter__c</fullName>
        <label>lien groupe chatter</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Duceppe_2010_2011</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Notes_de_suivi__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Théâtre saison 2010-2011</value>
        </filters>
        <label>Théâtre 2010-2011</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Hockey_2014_2015</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Notes_de_suivi__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>PR 2014-15 Québec | Hockey saison</value>
        </filters>
        <label>Hockey 2014-2015</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hockey_Canadiens_2011_2012</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Notes_de_suivi__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>Hockey Canadiens 2011-2012</value>
        </filters>
        <label>Hockey 2011-2012</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Hockey_Canadiens_2012_2013</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Notes_de_suivi__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>PR 2012-13 Québec | Hockey Canadiens</value>
        </filters>
        <label>Hockey 2012-2013</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Hockey_Canadiens_2013_2014</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Notes_de_suivi__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>PR 2013-14 Québec | Hockey Canadiens</value>
        </filters>
        <label>Hockey 2013-2014</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OSM_2010_2011</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Notes_de_suivi__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>OSM saison 2010-2011</value>
        </filters>
        <label>OSM 2010-2011</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>OSM_2012_2013</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Notes_de_suivi__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>PR 2012-13 Québec | OSM saison</value>
        </filters>
        <label>OSM 2012-2013</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>OSM_2013_2014</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Notes_de_suivi__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>PR 2013-14 Québec | OSM saison</value>
        </filters>
        <label>OSM 2013-2014</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>OSM_saison_2011_2012</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Notes_de_suivi__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>osm saison 2011-2012</value>
        </filters>
        <label>OSM 2011-2012</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>PR_2014_20151</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>Notes_de_suivi__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Service_focus__c</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>TOT_BUDGETED_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>PR 2014-15</value>
        </filters>
        <label>PR 2014-2015-CC</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Relations_Publiques_2010_2011_On</fullName>
        <columns>Region__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Notes_de_suivi__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Relations Publiques 2009-10 (On)</value>
        </filters>
        <label>Relations Publiques 2010-2011 On</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Relations_Publiques_2010_2011_Qc</fullName>
        <columns>Region__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Notes_de_suivi__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Relations Publiques 2010-11 (Qc)</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Province Québec,Laval,Québec</value>
        </filters>
        <label>Relations Publiques 2010-11 (Qc)</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Relations_Publiques_2012_2013_Qc</fullName>
        <columns>Region__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Notes_de_suivi__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>Relations Publiques 2012-13 Québec</value>
        </filters>
        <label>Relations Publiques 2012-2013 Québec</label>
        <language>fr</language>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>